# Yesod-And-GHCJS-Example

./: .gitignore  ClientSide.hs  Foundation.hs  Model.hs  OutPut.md  YesodAndGHCJSExample.cabal  devel.hs  stack.yaml
clientSide/: main.hs
config/: keter.yml  models  routes  sqlite.yml
templates/: default-layout-wrapper.hamlet
